--- a/client/src/components/Mixing/MixPage.css
+++ b/client/src/components/Mixing/MixPage.css
@@ -284,16 +284,12 @@
     outline: none;
     color: #fff;
     background-color: rgb(17, 17, 17);
-    /* padding-left: 10%;
-    padding-right: 10%; */
     padding-bottom: 5%;
     border-radius: 5px;
     font-size: 150%;
     text-align: center;
     width: 150%;
-    /* margin-bottom: 3.25%; */
     margin-left: 5%;
-
 }
 
 .switch-mix:hover {
@@ -393,3 +389,26 @@
     transition: .5s ease;
 }
 
+.mix-recipe-identity-total{
+    margin-top: 1.5%;
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: rgb(36, 36, 36);
+    border-radius: 10px;
+    width: 80%;
+    color: #fff;
+    font-family: 'Shippori Mincho', serif;
+    font-size: larger;
+    padding-top: 1%;
+    padding-bottom: 2%;
+    transition: .75s ease;
+    margin-bottom: 1.5%;
+
+}
+
+.mix-recipe-partsCount-total{
+    margin-left: 1.5%;
+    color: rgb(128, 126, 126);
+    align-self: center;
+}
