--- a/client/src/components/Modals/ResultsModal/ResultsModal.css
+++ b/client/src/components/Modals/ResultsModal/ResultsModal.css
@@ -112,6 +112,8 @@
     flex-direction: row;
     border-radius: 10px;
     margin-top: 2.5%;
+    margin-left: 1.5%;
+    margin-right: 1.5%;
 }
 
 .resultModal-drink-image{
