--- a/client/src/components/Mixing/MixPage.css
+++ b/client/src/components/Mixing/MixPage.css
@@ -98,7 +98,7 @@
     overflow-y: scroll;
     -ms-overflow-style: none;
     scrollbar-width: none;
-    margin-bottom: 8%;
+    margin-bottom: 6%;
 }
 
 .mix-recipes-wrapper::-webkit-scrollbar {
@@ -394,7 +394,7 @@
     display:flex;
     flex-direction: row;
     justify-content: center;
-    background-color: rgb(27, 27, 27);
+    background-color: rgb(17, 17, 17);
     border-radius: 10px;
     width: 80%;
     color: #fff;
@@ -411,4 +411,10 @@
     margin-left: 1.5%;
     color: rgb(128, 126, 126);
     align-self: center;
+    transition: .75s;
+}
+
+.max {
+    color: #f37f7f;
+    transition: .75s;
 }
