--- a/client/src/components/Modals/InformationModal/InformationModal.css
+++ b/client/src/components/Modals/InformationModal/InformationModal.css
@@ -21,7 +21,7 @@
 .information-items{
     font-family: 'Shippori Mincho', serif;
     font-size: 165%;
-    color: #fff;
+    color: rgb(211, 211, 211);
     justify-content: flex-start;
     text-align: left;
     width: 85%;
