--- a/client/src/components/Modals/InformationModal/InformationModal.css
+++ b/client/src/components/Modals/InformationModal/InformationModal.css
@@ -26,7 +26,7 @@
     text-align: left;
     width: 85%;
     margin-left: 10%;
-    margin-top: 1.5%;
+    margin-top: .5%;
 }
 
 .information-item{
