--- a/client/src/components/SearchPage/SearchPage.css
+++ b/client/src/components/SearchPage/SearchPage.css
@@ -55,6 +55,7 @@
     font: 100 10vh "Vibur";
     cursor: default;
     transition: 1s;
+    user-select: none;
 }
 
 .search-results-title-off {
@@ -65,6 +66,7 @@
     font: 100 10vh "Vibur";
     cursor: default;
     transition: 1s;
+    user-select: none;
 }
 
 .search-results-title:active {
