--- a/client/src/components/SearchPage/SearchPage.css
+++ b/client/src/components/SearchPage/SearchPage.css
@@ -13,6 +13,8 @@
     font: 100 6vh "Vibur";
     cursor: pointer;
     transition: .5s ease;
+    user-select: none;
+
 }
 
 .go-home-button:hover {
@@ -21,9 +23,9 @@
     height: 100%
 }
 
-.go-home-button:nth-child(1){
+.go-home-button:nth-child(1) {
     margin-left: 0%;
-        margin-right: 1%;
+    margin-right: 1%;
 }
 
 .go-home-button-off {
@@ -37,9 +39,9 @@
     transition: .5s ease;
 }
 
-.go-home-button-off:nth-child(1){
+.go-home-button-off:nth-child(1) {
     margin-left: 0%;
-        margin-right: 1%;
+    margin-right: 1%;
 }
 
 .go-home-button-off:hover {
@@ -128,13 +130,15 @@
     margin-top: -10%;
     color: rgba(255, 255, 255, 0.471);
     font-size: 125%;
+    user-select: none;
 }
 
 .results-search:focus {
-    /* margin-top: -5%; */
     cursor: text;
     opacity: .65;
-    color: #fff
+    color: #fff;
+    user-select: none;
+
 }
 
 .no-results-container {
@@ -175,7 +179,7 @@
 }
 
 
-.search-page-cards-container{
+.search-page-cards-container {
     /* margin-left: 1%; */
     margin-top: 1.15%;
     display: flex;
