--- a/client/src/components/Mixing/MixPage.css
+++ b/client/src/components/Mixing/MixPage.css
@@ -40,6 +40,7 @@
     font: 100 6vh "Vibur";
     cursor: pointer;
     transition: 1s ease;
+    user-select: none;
 }
 
 .go-home-mix-page-button:nth-of-type(1) {
@@ -82,7 +83,6 @@
 
 .mix-page-jug-container {
     margin-top: -.5%;
-    /* margin-left: -20%; */
     margin-right: 2.5%;
     width: 30%;
     height: 78.5vh;
@@ -129,7 +129,6 @@
     width: 85vh;
     max-width: 85vh;
     height: 78.5vh;
-    /* border-radius: 10px; */
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 
@@ -154,7 +153,6 @@
 }
 
 .mix-page-ingredients-cards-container {
-    /* margin-left: 1%; */
     margin-top: 3%;
     margin-bottom: 2%;
     display: flex;
@@ -190,7 +188,6 @@
 }
 
 .mix-recipe-title {
-    /* margin-top: 1.25%; */
     background-color: rgb(39, 39, 39);
     padding-bottom: .75%;
     border-top-left-radius: 10px;
@@ -226,8 +223,6 @@
 
 .mix-recipe-image {
     height: 4vh;
-    /* margin-right: -25%; */
-    /* margin-right: 3%; */
 }
 
 .mix-recipe-nameandcount {
@@ -243,11 +238,9 @@
 
 .mix-recipe {
     align-self: center;
-    /* margin-left: -7.5%; */
 }
 
 .mix-recipe-partsCount{
-    /* margin-left: 2.5%; */
     color: rgb(128, 126, 126);
     align-self: center;
 }
@@ -270,7 +263,6 @@
     border: none;
     outline: none;
     color: rgb(245, 187, 187);
-    /* text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff4a4469, 0 0 0.5em #ff4a4469, 0 0 0.1em #ff4a4469, 0 10px 3px #000; */
     background-color: rgb(17, 17, 17);
     padding-left: 10%;
     padding-right: 10%;
