--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,2 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Style+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&family=PT+Sans:ital,wght@1,700&family=Shippori+Mincho&display=swap');
+
+button {
+    user-select: none;
+}
