removed user select from ingredient tabs and changed cursor

--- a/client/src/components/Mixing/MixPage.css
+++ b/client/src/components/Mixing/MixPage.css
@@ -358,6 +358,8 @@
     width: 100%;
     transition: .5s ease;
     padding-top: .75%;
+    user-select: none;
+    cursor: pointer;
 }
 
 .mix-page-ingredients-type-tab:nth-of-type(1) {
