--- a/client/src/components/Mixing/MixPage.css
+++ b/client/src/components/Mixing/MixPage.css
@@ -197,6 +197,7 @@
     color: #fff;
     font-family: 'Shippori Mincho', serif;
     font-size: 3vh;
+    user-select: none;
 }
 
 .mix-recipe-identity{
@@ -421,7 +422,7 @@
     padding-bottom: 2%;
     transition: .75s ease;
     margin-bottom: 1.5%;
-
+    user-select: none;
 }
 
 .mix-recipe-partsCount-total{
