--- a/client/src/components/homepage/HomePage.css
+++ b/client/src/components/homepage/HomePage.css
@@ -181,10 +181,19 @@ body {
   text-align: center;
   margin-top: 1.5%;
   color: white;
+  margin-left: 1.5%;
+  margin-right: 1.5%;
+
 }
 
 .home-mix-button:hover{
   opacity: .75;
   color: #fff;
   cursor: pointer;
+}
+
+
+.home-buttons-wrapper{
+  display: flex;
+  justify-content: center;
 }
