resized mix modal input text for readability

--- a/client/src/components/Modals/MixModal/MixModal.css
+++ b/client/src/components/Modals/MixModal/MixModal.css
@@ -51,7 +51,7 @@
     border-color: transparent;
     font-family: 'Shippori Mincho', serif;
     border-radius: 5px;
-    font-size: 300%;
+    font-size: 5vh;
     width: 100%;
     color: #fff;
 }
